--- a/Semana13/authapp/pubspec.yaml
+++ b/Semana13/authapp/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_sign_in: ^7.2.0
   supabase_flutter: ^2.10.3
 
 dev_dependencies:
